--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "token-vesting"
 version = "0.1.0"
-authors = ["Elliott Benisty <elliott@bonfida.com>", "Lucas Chaumeny <lucas@bonfida.com>"]
+authors = ["Gaurav Sengar <gaurav@metamalls.io>", "Rakesh Sharma <rakesh@metamalls.io>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
