--- a/Anchor.toml
+++ b/Anchor.toml
@@ -4,8 +4,8 @@ anchor_version = "0.13.2"
 members = ["program"]
 
 [provider]
-cluster = "mainnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [programs.mainnet]
-token_vesting = "CChTq6PthWU82YZkbveA3WDf7s97BWhBK4Vx9bmsT743"
+token_vesting = "FhNbZ87io3fvp3f9Q3ggeJLQhNTEPCsuoW8SS1xJYzeN"
